@@ -2173,3 +2173,5 @@
 20071021 disk/wd_fdc.c: remove fdc_list (part of patch #1779138).
 20071021 disk/wd_fdc.c,event.[ch]: add timeout event (part of patch #1779138)
 	 (Gergely Szasz).
+20071022 Makefile.am,bitmap.h,disk/{disk.c,fdd.c}: add and use bitmap functions
+	 for 'clocks' bitmaps (Stuart).
